adds correct 7hm

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <ul class="features__list">
             <li class="features__item">
               <div class="features__page-container">
-                <svg with="70" height="70">
+                <svg width="70" height="70">
                   <use href="./images/icons-sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -108,7 +108,7 @@
             </li>
             <li class="features__item">
               <div class="features__page-container">
-                <svg with="70" height="70">
+                <svg width="70" height="70">
                   <use href="./images/icons-sprite.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -120,7 +120,7 @@
             </li>
             <li class="features__item">
               <div class="features__page-container">
-                <svg with="70" height="70">
+                <svg width="70" height="70">
                   <use href="./images/icons-sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -131,7 +131,7 @@
             </li>
             <li class="features__item">
               <div class="features__page-container">
-                <svg with="70" height="70">
+                <svg width="70" height="70">
                   <use href="./images/icons-sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -595,12 +595,12 @@
               </svg>
             </div>
             <div class="form__group">
-              <label class="form__label" for="mail">Пошта </label>
+              <label class="form__label" for="form_mail">Пошта </label>
               <input
                 class="form__input"
                 type="email"
-                name="mail"
-                id="mail"
+                name="form_mail"
+                id="form_mail"
                 required
               />
               <svg class="form__icon" width="15" height="12">
